# ppl.nn

samples/cpp/: CMakeLists.txt
samples/cpp/opencv4_4_x86_gcc4_9/include/opencv4/opencv2/: opencv_modules.hpp
samples/cpp/opencv4_4_x86_gcc4_9/lib/: libopencv_img_hash.so.4.4.0
samples/cpp/opencv4_4_x86_gcc4_9/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
samples/cpp/run_model/: CMakeLists.txt
